<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo1"
        android:scaleType="centerCrop" />

    <EditText
        android:id="@+id/noteEditText"
        android:layout_width="match_parent"

        android:layout_below="@id/imageView"
        android:layout_marginBottom="200dp"
        android:autofillHints=""
        android:hint="@string/note"
        android:inputType=""  android:layout_height="20000dp"/>

    <Button
        android:id="@+id/button_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/noteEditText"
        android:text="@string/take_photo1" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save1" />

    <Button
        android:id="@+id/button_save_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_take_photo"
        android:text="@string/save_note1" />
</RelativeLayout>
